# kjieba

./: .gitmodules  0001-cpp.patch  CMakeLists.txt  README
dbus/: CMakeLists.txt  KJiebaAppDBusInterfaceConfig.cmake.in  daemon.cpp  daemon.h  kjieba.desktop  main.cpp  org.isoftlinux.kjieba.App.xml  org.isoftlinux.kjieba.service.in  pinyin.h
example/: CMakeLists.txt  query.cpp
krunner/: CMakeLists.txt  kjiebarunner.cpp  kjiebarunner.h  plasma-runner-kjieba.desktop
lib/: CMakeLists.txt  KJiebaConfig.cmake.in  kjieba_interface.cpp  kjieba_interface.h  kjieba_interface_p.h
po/: CMakeLists.txt  kjieba.pot  zh_CN.po
test/: CMakeLists.txt  test_c2p.cpp
